# React-fastapi-template

./: .dockerignore  .gitignore  Makefile  README.md  dev-server.py  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml
api/: .gitignore  Dockerfile  Dockerfile.dev  README.md  dev.py  env.example  pyproject.toml  requirements-dev.txt  requirements.txt
api/app/: __init__.py  config.py  logging.py  main.py
api/tests/: test_endpoints.py
client/: .eslintrc.cjs  .gitignore  Dockerfile  Dockerfile.dev  env.example  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
client/src/: App.tsx  index.css
client/src/__tests__/: App.test.tsx
